# connector-c-examples

./: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.base  Makefile.in  README  README.md  TODO  acinclude.m4  autogen.sh  configure  configure.ac  configure.in  helpers.h  list  mariadb_get_infov.c  my.cnf.dist  mysql.m4  mysql_change_user.c  mysql_character_set_name.c  mysql_close.c  mysql_create_db.c  mysql_data_seek.c  mysql_dump_debug_info.c  mysql_errno.c  mysql_error.c  mysql_fetch_field.c  mysql_fetch_field_direct.c  mysql_fetch_fields.c  mysql_fetch_lengths.c  mysql_fetch_row.c  mysql_field_count.c  mysql_free_result.c  mysql_get_client_info.c  mysql_get_client_version.c  mysql_get_host_info.c  mysql_get_proto_info.c  mysql_get_server_info.c  (+35 more)
m4/: mysql.m4
ssl/: ca-cert.pem  ca-key.pem  client-cert.pem  client-key.pem  client-req.pem  server-cert.pem  server-key.pem  server-req.pem
